# Copyright (c) 2024 The AONE SFU project authors.
import("../../rtc_peerconnection.gni")

group("p2p") {
    deps = [
        ":base",
    ]
}

rtc_sfu_source_set("base") {
    sources = [
        "base/async_stun_tcp_socket.cc",
        "base/async_stun_tcp_socket.h",
        "base/basic_async_resolver_factory.cc",
        "base/basic_async_resolver_factory.h",
        "base/basic_ice_controller.cc",
        "base/basic_ice_controller.h",
        "base/basic_packet_socket_factory.cc",
        "base/basic_packet_socket_factory.h",
        "base/candidate_pair_interface.h",
        "base/connection_info.cc",
        "base/connection_info.h",
        "base/connection.cc",
        "base/connection.h",
        "base/default_ice_transport_factory.cc",
        "base/default_ice_transport_factory.h",
        "base/dtls_transport_factory.h",
        "base/dtls_transport_internal.cc",
        "base/dtls_transport_internal.h",
        "base/dtls_transport.cc",
        "base/dtls_transport.h",
        "base/ice_controller_factory_interface.h",
        "base/ice_controller_interface.cc",
        "base/ice_controller_interface.h",
        "base/ice_credentials_iterator.cc",
        "base/ice_credentials_iterator.h",
        "base/ice_transport_internal.cc",
        "base/ice_transport_internal.h",
        "base/p2p_constants.cc",
        "base/p2p_constants.h",
        "base/p2p_transport_channel_ice_field_trials.h",
        "base/p2p_transport_channel.cc",
        "base/p2p_transport_channel.h",
        "base/packet_transport_internal.cc",
        "base/packet_transport_internal.h",
        "base/port_allocator.cc",
        "base/port_allocator.h",
        "base/port_interface.cc",
        "base/port_interface.h",
        "base/port.cc",
        "base/port.h",
        "base/regathering_controller.cc",
        "base/regathering_controller.h",
        "base/stun_port.cc",
        "base/stun_port.h",
        "base/stun_request.cc",
        "base/stun_request.h",
        "base/stun_server.cc",
        "base/stun_server.h",
        "base/tcp_port.cc",
        "base/tcp_port.h",
        "base/transport_description_factory.cc",
        "base/transport_description_factory.h",
        "base/transport_description.cc",
        "base/transport_description.h",
        "base/transport_info.h",
        "base/turn_port.cc",
        "base/turn_port.h",
#        "base/turn_server.cc",
#        "base/turn_server.h",
        "base/udp_port.h",
        "client/basic_port_allocator.cc",
        "client/basic_port_allocator.h",
        "client/relay_port_factory_interface.h",
        "client/turn_port_factory.cc",
        "client/turn_port_factory.h",
    ]

    deps = [
        "../../rtc_pc_src:RTCThreadManagerInterface",
        "../api:array_view",
        "../api:candidate",
        "../api:dtls_transport_interface",
        "../api:ice_transport_interface",
        "../api:make_ref_counted",
        "../api:packet_socket_factory",
        "../api:rtc_error",
        "../api:scoped_refptr",
        "../api:turn_customizer",
        "../api/crypto",
        "../api/rtc_event_log",
        "../api/task_queue",
        "../api/transport:enums",
        "../api/transport:stun_types",
        "../api/units:time_delta",
        "../api/units:timestamp",
        "../logging:ice_logger",
        "../logging:rtc_event_dtls_transport_state",
        "../logging:rtc_event_dtls_writable_state",
        "../logging:rtc_event_ice_candidate_pair_config",
        "../logging:rtc_event_ice_candidate_pair",
        "../rtc_base:async_invoker",        
        "../rtc_base:async_socket",
        "../rtc_base:async_packet_socket",
        "../rtc_base:async_resolver_interface",
        "../rtc_base:async_tcp_socket",
        "../rtc_base:async_udp_socket",
        "../rtc_base:bind",
        "../rtc_base:buffer",
        "../rtc_base:buffer_queue",
        "../rtc_base:byte_buffer",
        "../rtc_base:byte_order",
        "../rtc_base:constructor_magic",
        "../rtc_base:callback_list",
        "../rtc_base:checks",
        "../rtc_base:crc32",
        "../rtc_base:dscp",
        "../rtc_base:helpers",
        "../rtc_base:ip_address",
        "../rtc_base:location",
        "../rtc_base:logging",
        "../rtc_base:macromagic",
        "../rtc_base:mdns_responder_interface",
        "../rtc_base:net_helper",
        "../rtc_base:net_helpers",
        "../rtc_base:network",
        "../rtc_base:network_constants",
        "../rtc_base:network_route",
        "../rtc_base:proxy_info",
        "../rtc_base:rate_tracker",
        "../rtc_base:ref_count",
        "../rtc_base:numerics",
        "../rtc_base/synchronization:sequence_checker",
        "../rtc_base:socket",
        "../rtc_base:socket_adapters",
        "../rtc_base:socket_address",
        "../rtc_base:socket_factory",
        "../rtc_base:socket_server",
        "../rtc_base:ssl",
        "../rtc_base:stream",
        "../rtc_base:stringutils",
        "../rtc_base:thread_annotations",
        "../rtc_base:threading",
        "../rtc_base:time_utils",
        "../rtc_base/task_utils:to_queued_task",
        "../rtc_base/task_utils:pending_task_safety_flag",
        "../rtc_base/containers:flat_map",
        "../rtc_base/experiments:field_trial_parser",
        "../rtc_base/system:no_unique_address",
        "../rtc_base:safe_minmax",
        "../rtc_base:thread_checker",
        "../rtc_base:weak_ptr",
        "../rtc_base/network:sent_packet",
        "../rtc_base/synchronization:mutex",
        "../rtc_base/system:rtc_export",
        "../rtc_base/third_party/base64",
        "../rtc_base/third_party/sigslot",
        "../system_wrappers",
        "../system_wrappers:field_trial",
        "../../rtc_pc_src:_deprecate_defines",     
    ]
}
